--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
-title: Profile Page
-description: Rajesh Krishnan's profile page on GitHub
+title: Rajesh Krishnan
+description: Rajesh Krishnan's webpages on GitHub
