--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,3 @@
 theme: jekyll-theme-minimal
 title: Rajesh Krishnan
-description: Rajesh Krishnan's webpages on GitHub
+description: Namaste (नमस्ते). Welcome to my webpages on GitHub.
