permalink for blog

--- a/_config.yml
+++ b/_config.yml
@@ -1,3 +1,4 @@
 theme: jekyll-theme-minimal
 title: Rajesh Krishnan
 description: Namaste (नमस्ते). Welcome to my web site on GitHub.
+permalink: pretty
