--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,4 @@
 theme: jekyll-theme-minimal
 title: Rajesh Krishnan
-description: Namaste (नमस्ते). Welcome to my web site. I am a retired computer
-scientist who lives in Fort Valley, Virginia, USA. For a list of my patents and technical publications, see [Google Scholar](https://scholar.google.com/citations?hl=en&user=aMfW5dMAAAAJ&pagesize=100&sortby=pubdate).
-
+description: Namaste (नमस्ते). Welcome to my web site. I am a retired computer scientist who lives in Fort Valley, Virginia, USA. 
 permalink: pretty
