--- a/_config.yml
+++ b/_config.yml
@@ -1,4 +1,4 @@
 theme: jekyll-theme-minimal
 title: Rajesh Krishnan
-description: Namaste (नमस्ते). Welcome to my web site. I am a retired computer scientist who lives in Fort Valley, Virginia, USA.
+description: Namaste (नमस्ते). 
 permalink: pretty
